--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,9 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
+
+.box-password {
+  margin-top: 20px;
+}
+
+.box.column.is-one-third {
+  width: 100%;
+}
