--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
       <button [disabled]="!(length && (includeLetters || includeSymbols || includeNumbers))  " (click)="submit()" class="button is-link is-fullwidth">
         Generate!
       </button>
-      <div class="box">
+      <div class="box-password" *ngIf="password">
         <label>Your Password</label>
         <input class="input" [value]="password"/>
       </div>
